removed https for addMeeting.html

--- a/addMeeting.html
+++ b/addMeeting.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS CDN -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+      href="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
       integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
       crossorigin="anonymous"
     />
@@ -20,20 +20,17 @@
     <!-- Font Awesome JS -->
     <script
       defer
-      src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
+      src="//use.fontawesome.com/releases/v5.0.13/js/solid.js"
       integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
       crossorigin="anonymous"
     ></script>
     <script
       defer
-      src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
+      src="//use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
       integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
       crossorigin="anonymous"
     ></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Mukta"
-      rel="stylesheet"
-    />
+    <link href="//fonts.googleapis.com/css?family=Mukta" rel="stylesheet" />
   </head>
 
   <body>
@@ -250,19 +247,19 @@
 
     <!-- jQuery CDN - Minified version -->
     <script
-      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      src="//code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
     ></script>
     <!-- Popper.JS -->
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+      src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
       integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
       crossorigin="anonymous"
     ></script>
     <!-- Bootstrap JS -->
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+      src="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
       integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
       crossorigin="anonymous"
     ></script>
