--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <!-- Bootstrap CSS CDN -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+      href="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
       integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
       crossorigin="anonymous"
     />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:900"
+      href="//fonts.googleapis.com/css?family=Frank+Ruhl+Libre:900"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Julius+Sans+One"
+      href="//fonts.googleapis.com/css?family=Julius+Sans+One"
       rel="stylesheet"
     />
 
@@ -349,19 +349,19 @@
     </div>
     <!-- jQuery CDN - Minified version -->
     <script
-      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      src="//code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
     ></script>
     <!-- Popper.JS -->
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+      src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
       integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
       crossorigin="anonymous"
     ></script>
     <!-- Bootstrap JS -->
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+      src="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
       integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
       crossorigin="anonymous"
     ></script>
