--- a/supervisor/reviewSupervisor.html
+++ b/supervisor/reviewSupervisor.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Font Awesome JS -->
     <script
       defer
@@ -44,22 +44,22 @@
       <!-- Sidebar Holder -->
       <nav id="sidebar">
         <div class="sidebar-header">
-          <img src="img/umrmms.png" alt="UM RMMS" />
+          <img src="../img/umrmms.png" alt="UM RMMS" />
           <h5 class="text-center">Welcome back, supervisor.</h5>
         </div>
 
         <ul class="list-unstyled components">
           <li>
-            <a href="addMeeting.html">Add Meeting</a>
+            <a href="addMeetingSupervisor.html">Add Meeting</a>
           </li>
           <li>
-            <a href="manageMeeting.html">Meeting Records</a>
+            <a href="manageMeetingSupervisor.html">Meeting Records</a>
           </li>
           <li>
-            <a href="checklist.html">Checklist</a>
+            <a href="checklistSupervisor.html">Checklist</a>
           </li>
           <li>
-            <a href="progress.html">Manage Progress</a>
+            <a href="progressSupervisor.html">Manage Progress</a>
           </li>
           <li class="active">
             <a href="#">Review Reports</a>
@@ -68,7 +68,7 @@
 
         <ul class="list-unstyled CTAs">
           <li>
-            <a href="index.html" class="download">Log Out</a>
+            <a href="../index.html" class="download">Log Out</a>
           </li>
         </ul>
       </nav>
@@ -95,7 +95,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="reviewStudent.html">Student</a>
+                  <a class="nav-link" href="../reviewStudent.html">Student</a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Supervisor</a>
