--- a/checklist.html
+++ b/checklist.html
@@ -95,10 +95,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Main</a>
+                  <a class="nav-link" href="#">Student</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Profile</a>
+                  <a class="nav-link" href="supervisor/checklistSupervisor.html"
+                    >Supervisor</a
+                  >
                 </li>
               </ul>
             </div>
