--- a/supervisor/addMeetingSupervisor.html
+++ b/supervisor/addMeetingSupervisor.html
@@ -15,8 +15,8 @@
       crossorigin="anonymous"
     />
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/addMeeting/calendar.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/addMeeting/calendar.css" />
     <!-- Font Awesome JS -->
     <script
       defer
@@ -38,8 +38,8 @@
       <!-- Sidebar Holder -->
       <nav id="sidebar">
         <div class="sidebar-header">
-          <img src="img/umrmms.png" alt="UM RMMS" />
-          <h5 class="text-center">Welcome back, student.</h5>
+          <img src="../img/umrmms.png" alt="UM RMMS" />
+          <h5 class="text-center">Welcome back, supervisor.</h5>
         </div>
 
         <ul class="list-unstyled components">
@@ -47,22 +47,22 @@
             <a href="#">Add Meeting</a>
           </li>
           <li>
-            <a href="manageMeeting.html">Meeting Records</a>
+            <a href="manageMeetingSupervisor.html">Meeting Records</a>
           </li>
           <li>
-            <a href="checklist.html">Checklist</a>
+            <a href="checklistSupervisor.html">Checklist</a>
           </li>
           <li>
-            <a href="progress.html">Manage Progress</a>
+            <a href="progressSupervisor.html">Manage Progress</a>
           </li>
           <li>
-            <a href="reviewStudent.html">Review Reports</a>
+            <a href="reviewSupervisor.html">Review Reports</a>
           </li>
         </ul>
 
         <ul class="list-unstyled CTAs">
           <li>
-            <a href="index.html" class="download">Log Out</a>
+            <a href="../index.html" class="download">Log Out</a>
           </li>
         </ul>
       </nav>
@@ -90,15 +90,11 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Student</a>
-                </li>
                 <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="supervisor/addMeetingSupervisor.html"
-                    >Supervisor</a
-                  >
+                  <a class="nav-link" href="../addMeeting.html">Student</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Supervisor</a>
                 </li>
               </ul>
             </div>
@@ -267,8 +263,8 @@
       integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
       crossorigin="anonymous"
     ></script>
-    <script src="js/addMeeting/underscore-min.js"></script>
-    <script src="js/addMeeting/calendar.js"></script>
+    <script src="../js/addMeeting/underscore-min.js"></script>
+    <script src="../js/addMeeting/calendar.js"></script>
 
     <script type="text/javascript">
       $(document).ready(function() {
@@ -278,7 +274,7 @@
         });
       });
     </script>
-    <script src="js/addMeeting/app.js"></script>
-    <script src="js/addMeeting/autocomplete.js"></script>
+    <script src="../js/addMeeting/app.js"></script>
+    <script src="../js/addMeeting/autocomplete.js"></script>
   </body>
 </html>
