--- a/supervisor/manageMeetingSupervisor.html
+++ b/supervisor/manageMeetingSupervisor.html
@@ -12,9 +12,9 @@
       integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/checklist/styleChecklist.css" />
+    <link rel="stylesheet" href="../css/checklist/styleChecklist.css" />
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Font Awesome JS -->
     <script
       defer
@@ -37,7 +37,7 @@
       integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/manageMeeting/meetingrecord.css" />
+    <link rel="stylesheet" href="../css/manageMeeting/meetingrecord.css" />
     <link href="//fonts.googleapis.com/css?family=Mukta" rel="stylesheet" />
   </head>
   <body>
@@ -45,31 +45,31 @@
       <!-- Sidebar Holder -->
       <nav id="sidebar">
         <div class="sidebar-header">
-          <img src="img/umrmms.png" alt="UM RMMS" />
-          <h5 class="text-center">Welcome back, student.</h5>
+          <img src="../img/umrmms.png" alt="UM RMMS" />
+          <h5 class="text-center">Welcome back, supervisor.</h5>
         </div>
 
         <ul class="list-unstyled components">
           <li>
-            <a href="addMeeting.html">Add Meeting</a>
+            <a href="addMeetingSupervisor.html">Add Meeting</a>
           </li>
           <li class="active">
             <a href="#">Meeting Records</a>
           </li>
           <li>
-            <a href="checklist.html">Checklist</a>
+            <a href="checklistSupervisor.html">Checklist</a>
           </li>
           <li>
-            <a href="progress.html">Manage Progress</a>
+            <a href="progressSupervisor.html">Manage Progress</a>
           </li>
           <li>
-            <a href="reviewStudent.html">Review Reports</a>
+            <a href="reviewSupervisor.html">Review Reports</a>
           </li>
         </ul>
 
         <ul class="list-unstyled CTAs">
           <li>
-            <a href="index.html" class="download">Log Out</a>
+            <a href="../index.html" class="download">Log Out</a>
           </li>
         </ul>
       </nav>
@@ -95,15 +95,11 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Student</a>
-                </li>
                 <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="supervisor/manageMeetingSupervisor.html"
-                    >Supervisor</a
-                  >
+                  <a class="nav-link" href="../manageMeeting.html">Student</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Supervisor</a>
                 </li>
               </ul>
             </div>
@@ -129,7 +125,7 @@
                     <div class="inner">
                       <img
                         class="card-img-top img-fluid"
-                        src="img/test.jpeg"
+                        src="../img/test.jpeg"
                         alt="Card image cap"
                       />
                     </div>
@@ -165,7 +161,7 @@
                     <div class="inner">
                       <img
                         class="card-img-top img-fluid"
-                        src="img/test.jpeg"
+                        src="../img/test.jpeg"
                         alt="Card image cap"
                       />
                     </div>
@@ -227,7 +223,7 @@
           </h2>
           <div id="controls">
             <i class="icon-doc-text" id="createNote"
-              ><img src="img/button.png" alt="Button" height="30" width="30"
+              ><img src="../img/button.png" alt="Button" height="30" width="30"
             /></i>
           </div>
 
@@ -293,7 +289,7 @@
     </script>
     <script
       type="text/javascript"
-      src="js/manageMeeting/meetingrecord.js"
+      src="../js/manageMeeting/meetingrecord.js"
     ></script>
   </body>
 </html>
