--- a/supervisor/progress.html
+++ b/supervisor/progress.html
@@ -43,12 +43,6 @@
       href="//cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/css/bootstrap-select.min.css"
     />
     <link href="//fonts.googleapis.com/css?family=Mukta" rel="stylesheet" />
-    <style>
-      .card {
-        border-radius: 2rem;
-        border-width: 2px;
-      }
-    </style>
   </head>
   <body>
     <div class="wrapper">
@@ -121,82 +115,173 @@
         >
           Research Progress
         </h1>
-        <h3 class="mb-4 text-center">Students</h3>
-        <div class="row justify-content-center">
-          <div
-            class="card text-center pt-5 pb-5 ml-3 mr-3 mt-3 mb-3"
-            style="width: 18rem;"
-          >
-            <div class="card-body">
-              <h5 class="card-title">Ang Chun Wah</h5>
-              <p class="card-text">
-                ycwahwah@gmail.com
-              </p>
-              <a href="progress.html" class="btn btn-primary">View Progress</a>
+        <h3 class="text-center">Ang Chun Wah - ycwahwah@gmail.com</h3>
+        <div class="container mt-3 p-3">
+          <div id="chart_div"></div>
+        </div>
+        <div class="container mt-3">
+          <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                id="pills-home-tab"
+                data-toggle="pill"
+                href="#pills-home"
+                role="tab"
+                aria-controls="pills-home"
+                aria-selected="true"
+                >Add Task</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                id="pills-profile-tab"
+                data-toggle="pill"
+                href="#pills-profile"
+                role="tab"
+                aria-controls="pills-profile"
+                aria-selected="false"
+                >Update Task</a
+              >
+            </li>
+          </ul>
+          <div class="tab-content" id="pills-tabContent">
+            <div
+              class="tab-pane fade show active"
+              id="pills-home"
+              role="tabpanel"
+              aria-labelledby="pills-home-tab"
+            >
+              <form>
+                <div class="form-group">
+                  <label for="taskname">Task Name: </label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="taskname"
+                    placeholder="Enter task name"
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="sdate">Start Date: </label>
+                  <input type="date" class="form-control" id="sdate" />
+                </div>
+
+                <div class="form-group">
+                  <label for="edate">End Date: </label>
+                  <input type="date" class="form-control" id="edate" />
+                </div>
+
+                <div class="form-group">
+                  <label for="percent">Percent Complete</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="percent"
+                    placeholder="Enter the percent"
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="depend">Dependencies</label>
+                  <select
+                    class="selectpicker form-control"
+                    id="depend"
+                    multiple
+                  >
+                  </select>
+                </div>
+
+                <div class="form-group">
+                  <input
+                    class="btn btn-primary btn-lg"
+                    id="add"
+                    type="button"
+                    value="Add Task"
+                  />
+                  <a href="progressSupervisor.html">
+                    <button
+                      class="btn btn-primary btn-lg float-right"
+                      type="button"
+                    >
+                      Back
+                    </button>
+                  </a>
+                </div>
+              </form>
             </div>
-          </div>
-          <div
-            class="card text-center pt-5 pb-5 ml-3 mr-3 mt-3 mb-3"
-            style="width: 18rem;"
-          >
-            <div class="card-body">
-              <h5 class="card-title">Aidy</h5>
-              <p class="card-text">
-                aidy@gmail.com
-              </p>
-              <a href="progress.html" class="btn btn-primary">View Progress</a>
-            </div>
-          </div>
-          <div
-            class="card text-center pt-5 pb-5 ml-3 mr-3 mt-3 mb-3"
-            style="width: 18rem;"
-          >
-            <div class="card-body">
-              <h5 class="card-title">Cheng Kean Boon</h5>
-              <p class="card-text">
-                kbryant@gmail.com
-              </p>
-              <a href="progress.html" class="btn btn-primary">View Progress</a>
-            </div>
-          </div>
-          <div
-            class="card text-center pt-5 pb-5 ml-3 mr-3 mt-3 mb-3"
-            style="width: 18rem;"
-          >
-            <div class="card-body">
-              <h5 class="card-title">Chin Jia Xiong</h5>
-              <p class="card-text">
-                pffffxiongxiong@gmail.com
-              </p>
-              <a href="progress.html" class="btn btn-primary">View Progress</a>
-            </div>
-          </div>
-          <div
-            class="card text-center pt-5 pb-5 ml-3 mr-3 mt-3 mb-3"
-            style="width: 18rem;"
-          >
-            <div class="card-body">
-              <h5 class="card-title">Ong Pei Ling</h5>
-              <p class="card-text">
-                peiling@gmail.com
-              </p>
-              <a href="progress.html" class="btn btn-primary">View Progress</a>
-            </div>
-          </div>
-          <div
-            class="card text-center pt-5 pb-5 ml-3 mr-3 mt-3 mb-3"
-            style="width: 18rem;"
-          >
-            <div class="card-body">
-              <h5 class="card-title">Chor Choon Heng</h5>
-              <p class="card-text">
-                chorvv@gmail.com
-              </p>
-              <a href="progress.html" class="btn btn-primary">View Progress</a>
+            <div
+              class="tab-pane fade"
+              id="pills-profile"
+              role="tabpanel"
+              aria-labelledby="pills-profile-tab"
+            >
+              <form>
+                <div class="form-group">
+                  <label for="taskname2">Task Name: </label>
+                  <select id="taskname2" class="custom-select" required>
+                  </select>
+                </div>
+
+                <div class="form-group">
+                  <label for="sdate2">Start Date: </label>
+                  <input type="date" class="form-control" id="sdate2" />
+                </div>
+
+                <div class="form-group">
+                  <label for="edate2">End Date: </label>
+                  <input type="date" class="form-control" id="edate2" />
+                </div>
+
+                <div class="form-group">
+                  <label for="percent2">Percent Complete</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="percent2"
+                    placeholder="Enter the percent"
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="depend2">Dependencies</label>
+                  <select
+                    class="selectpicker form-control"
+                    id="depend2"
+                    multiple
+                  >
+                  </select>
+                </div>
+
+                <div class="form-group">
+                  <input
+                    class="btn btn-primary btn-lg"
+                    id="update"
+                    type="button"
+                    value="Update Task"
+                  />
+
+                  <input
+                    class="btn btn-primary btn-lg"
+                    id="remove"
+                    type="button"
+                    value="Remove Task"
+                  />
+                  <a href="progressSupervisor.html">
+                    <button
+                      class="btn btn-primary btn-lg float-right"
+                      type="button"
+                    >
+                      Back
+                    </button>
+                  </a>
+                </div>
+              </form>
             </div>
           </div>
         </div>
-
         <footer class="footer">
           <div class="container">
             <hr />
