changed meeting record to be objects

--- a/manageMeeting.html
+++ b/manageMeeting.html
@@ -122,79 +122,7 @@
             data-ride="carousel"
             data-interval="false"
           >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="row justify-content-center">
-                  <div class="card pl-0 pr-0 col-6 border-light">
-                    <div class="inner">
-                      <img
-                        class="card-img-top img-fluid"
-                        src="img/test.jpeg"
-                        alt="Card image cap"
-                      />
-                    </div>
-                    <div class="card-body">
-                      <h4 class="card-title">General meeting 1</h4>
-                      <p class="card-text">
-                        <strong>Date</strong>
-                        19/5/2019
-                        <br />
-                        <strong>Time </strong>
-                        9.45am
-                        <br />
-                        <strong>Venue </strong>
-                        FSKTM
-                        <br />
-                        <strong>Meeting details </strong>
-                        Have meeting with HS Ong and discuss about our project
-                        objective.
-                      </p>
-                      <p class="card-text">
-                        <small class="text-muted"
-                          >Last updated 3 mins ago</small
-                        >
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="carousel-item">
-                <div class="row justify-content-center">
-                  <div class="card pl-0 pr-0 col-6 border-light">
-                    <div class="inner">
-                      <img
-                        class="card-img-top img-fluid"
-                        src="img/test.jpeg"
-                        alt="Card image cap"
-                      />
-                    </div>
-                    <div class="card-body">
-                      <h4 class="card-title">General meeting 2</h4>
-                      <p class="card-text">
-                        <strong>Date</strong>
-                        19/5/2019
-                        <br />
-                        <strong>Time </strong>
-                        9.45am
-                        <br />
-                        <strong>Venue </strong>
-                        FSKTM
-                        <br />
-                        <strong>Meeting details </strong>
-                        Have meeting with HS Ong and discuss about our project
-                        objective.
-                      </p>
-                      <p class="card-text">
-                        <small class="text-muted"
-                          >Last updated 3 mins ago</small
-                        >
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div id="meetingrecord" class="carousel-inner"></div>
             <a
               class="carousel-control-prev"
               href="#myCarousel"
