minor changes to the words

--- a/supervisor/reviewSupervisor.html
+++ b/supervisor/reviewSupervisor.html
@@ -163,7 +163,7 @@
                 <td>finalest.pdf</td>
                 <td>2019-03-31</td>
                 <td>Nobita Kun</td>
-                <td>Pending</td>
+                <td>Approved</td>
                 <td>
                   <a href="#">Click to download</a>
                 </td>
@@ -208,7 +208,7 @@
                 <td>finalest.pdf</td>
                 <td>2019-03-31</td>
                 <td>Nobita Kun</td>
-                <td>Pending</td>
+                <td>Approved</td>
                 <td>
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Earum cum, aut sequi dignissimos modi incidunt vero nobis
